src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 616 × 336, bounds: 1248 × 688, states: []
size: 616 × 336, bounds: 1248 × 688, states: [Activated]
